--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -36,6 +36,7 @@
 <script src="vendor/angular-messages.js"></script>
 <script src="vendor/angular-resource.js"></script>
 <script src="vendor/angular-route.js"></script>
+<script src="vendor/angular-auth.js"></script>
 
 <script src="app.js"></script>
 <script src="directives/repeatPassword.js"></script>
@@ -45,6 +46,7 @@
 <script src="controllers/logout.js"></script>
 <script src="controllers/protected.js"></script>
 <script src="services/auth.js"></script>
+<script src="services/interceptor.js"></script>
 <script src="services/account.js"></script>
 </body>
 </html>
