Updated static files path to the new locstion of angular-auth.js

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -36,7 +36,7 @@
 <script src="vendor/angular-messages.js"></script>
 <script src="vendor/angular-resource.js"></script>
 <script src="vendor/angular-route.js"></script>
-<script src="../../src/angular-auth.js"></script>
+<script src="angular-auth.js"></script>
 
 <script src="app.js"></script>
 <script src="directives/repeatPassword.js"></script>
