Add font-awesome and bootstrap-social

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -7,7 +7,9 @@
   <title>ngAuth Demo</title>
   <link href="http://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link href="stylesheets/font-awesome.css" rel="stylesheet">
   <link href="stylesheets/bootstrap.css" rel="stylesheet">
+  <link href="stylesheets/bootstrap-social.css" rel="stylesheet">
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
