renamed all instances of angular-auth to satellizer

--- a/demo/client/index.html
+++ b/demo/client/index.html
@@ -38,7 +38,7 @@
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
-<script src="angular-auth.js"></script>
+<script src="satellizer.js"></script>
 
 <script src="app.js"></script>
 <script src="directives/repeatPassword.js"></script>
