--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -32,11 +32,11 @@
 
 <div ng-view></div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-messages.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-resource.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.js"></script>
-<script src="satellizer.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-messages.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-resource.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.js"></script>
+<script src="http://rawgit.com/sahat/satellizer/master/lib/satellizer.js"></script>
 
 <script src="app.js"></script>
 <script src="directives/repeatPassword.js"></script>
