--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ngAuth Demo</title>
+  <title>Satellizer Demo</title>
   <link href="http://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link href="stylesheets/font-awesome.css" rel="stylesheet">
