--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -10,6 +10,7 @@
   <link href="stylesheets/font-awesome.css" rel="stylesheet">
   <link href="stylesheets/bootstrap.css" rel="stylesheet">
   <link href="stylesheets/bootstrap-social.css" rel="stylesheet">
+  <link href="stylesheets/animate.css" rel="stylesheet">
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
@@ -38,6 +39,9 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-messages.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-resource.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-animate.js"></script>
+<script src="http://oss.maxcdn.com/angular.strap/2.0.0/angular-strap.min.js"></script>
+<script src="http://oss.maxcdn.com/angular.strap/2.0.0/angular-strap.tpl.min.js"></script>
 <script src="vendor/satellizer.min.js"></script>
 
 <script src="app.js"></script>
