client: added iconicons and custom social button classes; removed bootstrap-social

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Satellizer Demo</title>
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
   <link href="stylesheets/font-awesome.css" rel="stylesheet">
   <link href="stylesheets/bootstrap.css" rel="stylesheet">
   <link href="stylesheets/bootstrap-social.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
 <div class="navbar navbar-default navbar-static-top">
   <div class="navbar-header">
-    <a class="navbar-brand" href="/">Satellizer</a>
+    <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
   </div>
   <ul class="nav navbar-nav">
     <li><a href="/">Home</a></li>
@@ -30,8 +30,6 @@
     <li><a href="/#/logout">Logout</a></li>
   </ul>
 </div>
-
-
 
 <div ng-view></div>
 
