--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -30,7 +30,7 @@
   </ul>
 </div>
 
-<div ng-view></div>
+<div ng-view class="fadeZoom"></div>
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-messages.js"></script>
