--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -38,7 +38,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-animate.js"></script>
 <script src="http://oss.maxcdn.com/angular.strap/2.0.0/angular-strap.min.js"></script>
 <script src="http://oss.maxcdn.com/angular.strap/2.0.0/angular-strap.tpl.min.js"></script>
-<script src="vendor/satellizer.min.js"></script>
+<script src="vendor/satellizer.js"></script>
 
 <script src="app.js"></script>
 <script src="directives/passwordStrength.js"></script>
