meta tag for ssl certificate

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Satellizer</title>
   <link rel="shortcut icon" href="favicon.png">
+  <meta name="globalsign-domain-verification" content="Al-spX8fA5NNgAkjNI5FX_J2diSYK1TLG70LxQ1yDc" />
   <link href='http://fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
