--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta name="globalsign-domain-verification" content="Al-spX8fA5NNgAkjNI5FX_J2diSYK1TLG70LxQ1yDc" />
   <link href='//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-  <link href="//code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="//cdn.jsdelivr.net/animatecss/3.2.0/animate.css" rel="stylesheet">
   <link href="stylesheets/style.css" rel="stylesheet">
