moved client-side demo's app.js into app folder
The minimum compromise to get static assets to work with Java's Dropwizard framework.

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Satellizer</title>
   <link rel="shortcut icon" href="favicon.png">
-  <meta name="globalsign-domain-verification" content="Al-spX8fA5NNgAkjNI5FX_J2diSYK1TLG70LxQ1yDc" />
   <link href='//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +40,7 @@
 <script src="//oss.maxcdn.com/angular.strap/2.0.0/angular-strap.tpl.min.js"></script>
 <script src="vendor/satellizer.js"></script>
 
-<script src="app.js"></script>
+<script src="app/app.js"></script>
 <script src="directives/passwordStrength.js"></script>
 <script src="controllers/login.js"></script>
 <script src="controllers/signup.js"></script>
