Moved app.js back to root and changed app bundle in DW project

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -40,7 +40,7 @@
 <script src="//oss.maxcdn.com/angular.strap/2.0.0/angular-strap.tpl.min.js"></script>
 <script src="vendor/satellizer.js"></script>
 
-<script src="app/app.js"></script>
+<script src="app.js"></script>
 <script src="directives/passwordStrength.js"></script>
 <script src="controllers/login.js"></script>
 <script src="controllers/signup.js"></script>
