added navbar controller that uses isAuthenticated to check the status

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -12,19 +12,19 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="navbar navbar-default navbar-static-top">
+<div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
   <div class="navbar-header">
     <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
   </div>
   <ul class="nav navbar-nav">
     <li><a href="/">Home</a></li>
-    <li ng-if="isAuthenticated"><a href="/#/profile">Profile</a></li>
+    <li ng-if="isAuthenticated()"><a href="/#/profile">Profile</a></li>
   </ul>
-  <ul ng-if="!isAuthenticated" class="nav navbar-nav pull-right">
+  <ul ng-if="!isAuthenticated()" class="nav navbar-nav pull-right">
     <li><a href="/#/login">Login</a></li>
     <li><a href="/#/signup">Sign up</a></li>
   </ul>
-  <ul ng-if="isAuthenticated" class="nav navbar-nav pull-right">
+  <ul ng-if="isAuthenticated()" class="nav navbar-nav pull-right">
     <li><a href="/#/logout">Logout</a></li>
   </ul>
 </div>
@@ -46,6 +46,7 @@
 <script src="controllers/signup.js"></script>
 <script src="controllers/logout.js"></script>
 <script src="controllers/profile.js"></script>
+<script src="controllers/navbar.js"></script>
 <script src="services/account.js"></script>
 </body>
 </html>
