--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -32,11 +32,11 @@
 
 <div ng-view class="fadeZoom"></div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-messages.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-resource.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-route.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.13/angular-animate.js"></script>
+<script src="//code.angularjs.org/1.3.0-rc.1/angular.js"></script>
+<script src="//code.angularjs.org/1.3.0-rc.1/angular-messages.js"></script>
+<script src="//code.angularjs.org/1.3.0-rc.1/angular-resource.js"></script>
+<script src="//code.angularjs.org/1.3.0-rc.1/angular-route.js"></script>
+<script src="//code.angularjs.org/1.3.0-rc.1/angular-animate.js"></script>
 <script src="//oss.maxcdn.com/angular.strap/2.0.0/angular-strap.min.js"></script>
 <script src="//oss.maxcdn.com/angular.strap/2.0.0/angular-strap.tpl.min.js"></script>
 <script src="vendor/satellizer.js"></script>
