updated home navbar url

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -18,7 +18,7 @@
     <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
   </div>
   <ul class="nav navbar-nav">
-    <li><a href="/">Home</a></li>
+    <li><a href="/#/">Home</a></li>
     <li ng-if="isAuthenticated()"><a href="/#/profile">Profile</a></li>
   </ul>
   <ul ng-if="!isAuthenticated()" class="nav navbar-nav pull-right">
