use local lib files instead of CDN

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -32,15 +32,17 @@
 
 <div ui-view class="fadeZoom"></div>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-messages.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.1/angular-strap.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.1/angular-strap.tpl.js"></script>
+<!-- Third-party Libraries -->
+<script src="vendor/angular.js"></script>
+<script src="vendor/angular-messages.js"></script>
+<script src="vendor/angular-resource.js"></script>
+<script src="vendor/angular-animate.js"></script>
+<script src="vendor/angular-ui-router.js"></script>
+<script src="vendor/angular-strap.js"></script>
+<script src="vendor/angular-strap.tpl.js"></script>
 <script src="vendor/satellizer.js"></script>
 
+<!-- Application Code -->
 <script src="app.js"></script>
 <script src="directives/passwordStrength.js"></script>
 <script src="controllers/login.js"></script>
