added ionic example dependencies under vendor folder

--- a/examples/ionic/www/index.html
+++ b/examples/ionic/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="vendor/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -13,8 +13,10 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/satellizer/dist/satellizer.js"></script>
+    <script src="vendor/ionic/js/ionic.bundle.js"></script>
+
+    <!-- satellizer -->
+    <script src="vendor/satellizer/satellizer.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
