--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -45,6 +45,7 @@
 <!-- Application Code -->
 <script src="app.js"></script>
 <script src="directives/passwordStrength.js"></script>
+<script src="directives/passwordMatch.js"></script>
 <script src="controllers/login.js"></script>
 <script src="controllers/signup.js"></script>
 <script src="controllers/logout.js"></script>
