php: updated composer.json, removed BaseController.php

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -10,7 +10,7 @@
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="//cdn.jsdelivr.net/animatecss/3.2.0/animate.css" rel="stylesheet">
-  <link href="stylesheets/styles.css" rel="stylesheet">
+  <link href="/stylesheets/styles.css" rel="stylesheet">
 </head>
 <body>
 <div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
@@ -33,24 +33,24 @@
 <div ui-view class="fadeZoom"></div>
 
 <!-- Third-party Libraries -->
-<script src="vendor/angular.js"></script>
-<script src="vendor/angular-messages.js"></script>
-<script src="vendor/angular-resource.js"></script>
-<script src="vendor/angular-animate.js"></script>
-<script src="vendor/angular-ui-router.js"></script>
-<script src="vendor/angular-strap.js"></script>
-<script src="vendor/angular-strap.tpl.js"></script>
-<script src="vendor/satellizer.js"></script>
+<script src="/vendor/angular.js"></script>
+<script src="/vendor/angular-messages.js"></script>
+<script src="/vendor/angular-resource.js"></script>
+<script src="/vendor/angular-animate.js"></script>
+<script src="/vendor/angular-ui-router.js"></script>
+<script src="/vendor/angular-strap.js"></script>
+<script src="/vendor/angular-strap.tpl.js"></script>
+<script src="/vendor/satellizer.js"></script>
 
 <!-- Application Code -->
-<script src="app.js"></script>
-<script src="directives/passwordStrength.js"></script>
-<script src="directives/passwordMatch.js"></script>
-<script src="controllers/login.js"></script>
-<script src="controllers/signup.js"></script>
-<script src="controllers/logout.js"></script>
-<script src="controllers/profile.js"></script>
-<script src="controllers/navbar.js"></script>
-<script src="services/account.js"></script>
+<script src="/app.js"></script>
+<script src="/directives/passwordStrength.js"></script>
+<script src="/directives/passwordMatch.js"></script>
+<script src="/controllers/login.js"></script>
+<script src="/controllers/signup.js"></script>
+<script src="/controllers/logout.js"></script>
+<script src="/controllers/profile.js"></script>
+<script src="/controllers/navbar.js"></script>
+<script src="/services/account.js"></script>
 </body>
 </html>
