Use angular-local-storage module to better support local/session storage on safari while private browsing.

--- a/examples/server/ruby/public/index.html
+++ b/examples/server/ruby/public/index.html
@@ -40,6 +40,7 @@
 <script src="vendor/angular-ui-router.js"></script>
 <script src="vendor/angular-strap.js"></script>
 <script src="vendor/angular-strap.tpl.js"></script>
+<script src="vendor/angular-local-storage.js"></script>
 <script src="vendor/satellizer.js"></script>
 
 <!-- Application Code -->
