added github stats to the home page

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -46,6 +46,7 @@
 <script src="/app.js"></script>
 <script src="/directives/passwordStrength.js"></script>
 <script src="/directives/passwordMatch.js"></script>
+<script src="/controllers/home.js"></script>
 <script src="/controllers/login.js"></script>
 <script src="/controllers/signup.js"></script>
 <script src="/controllers/logout.js"></script>
