Removed fadeZoom animation from ui-view

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -30,16 +30,16 @@
   </ul>
 </div>
 
-<div ui-view class="fadeZoom"></div>
+<div ui-view></div>
 
 <!-- Third-party Libraries -->
 <script src="/vendor/angular.js"></script>
+<script src="/vendor/angular-aria.js"></script>
 <script src="/vendor/angular-messages.js"></script>
 <script src="/vendor/angular-resource.js"></script>
 <script src="/vendor/angular-animate.js"></script>
 <script src="/vendor/angular-ui-router.js"></script>
-<script src="/vendor/angular-strap.js"></script>
-<script src="/vendor/angular-strap.tpl.js"></script>
+<script src="/vendor/angular-material.js"></script>
 <script src="/vendor/satellizer.js"></script>
 
 <!-- Application Code -->
