--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -10,36 +10,22 @@
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="//cdn.jsdelivr.net/animatecss/3.2.0/animate.css" rel="stylesheet">
+  <link href="/stylesheets/angular-toastr.css" rel="stylesheet">
   <link href="/stylesheets/styles.css" rel="stylesheet">
 </head>
 <body>
-<div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
-  </div>
-  <ul class="nav navbar-nav">
-    <li><a href="/#/">Home</a></li>
-    <li ng-if="isAuthenticated()"><a href="/#/profile">Profile</a></li>
-  </ul>
-  <ul ng-if="!isAuthenticated()" class="nav navbar-nav pull-right">
-    <li><a href="/#/login">Login</a></li>
-    <li><a href="/#/signup">Sign up</a></li>
-  </ul>
-  <ul ng-if="isAuthenticated()" class="nav navbar-nav pull-right">
-    <li><a href="/#/logout">Logout</a></li>
-  </ul>
-</div>
+
 
 <div ui-view></div>
 
 <!-- Third-party Libraries -->
 <script src="/vendor/angular.js"></script>
-<script src="/vendor/angular-aria.js"></script>
+<script src="/vendor/angular-animate.js"></script>
 <script src="/vendor/angular-messages.js"></script>
 <script src="/vendor/angular-resource.js"></script>
-<script src="/vendor/angular-animate.js"></script>
+<script src="/vendor/angular-sanitize.js"></script>
 <script src="/vendor/angular-ui-router.js"></script>
-<script src="/vendor/angular-material.js"></script>
+<script src="/vendor/angular-toastr.tpls.js"></script>
 <script src="/vendor/satellizer.js"></script>
 
 <!-- Application Code -->
