--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -41,7 +41,7 @@
 <script src="/vendor/angular-sanitize.js"></script>
 <script src="/vendor/angular-ui-router.js"></script>
 <script src="/vendor/angular-toastr.tpls.js"></script>
-<script src="/vendor/satellizer.js"></script>
+<script src="/vendor/bundle.js"></script>
 
 <!-- Application Code -->
 <script src="/app.js"></script>
