Satellizer text on nav bar link correctly to the home page

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -16,7 +16,7 @@
 <body>
 <div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
   <div class="navbar-header">
-    <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
+    <a class="navbar-brand" href="/#/"><i class="ion-ios7-pulse-strong"></i> Satellizer</a>
   </div>
   <ul class="nav navbar-nav">
     <li><a href="/#/">Home</a></li>
